# xg_prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/model/: xgboost.yaml
data/: .gitignore  processed.dvc  raw.dvc
notebooks/: 01_data_exploration.ipynb  linear_regression.ipynb
reports/submissions/: submission.csv
xg_prediction/: __init__.py  dataset.py  features.py  plots.py
xg_prediction/modeling/: predict.py  train.py
